# ihsnpeaks

./: .dockerignore  .gitignore  Dockerfile.release  LICENSE  QWEN.md  README.md  fast_convert.h  makefile
dispatch/: build_release.py  build_release_arm64.py  build_release_macos.py  build_release_macos_arm64.py  hwloc_build.py  variants.py  zig_musl_cc.sh
downstream/cuihsnpeaks/: makefile
downstream/cuihsnpeaks/src/nufft/: cunufft.cu  cunufft.h
downstream/cuihsnpeaks/tests/: 1_nufft.c
downstream/lc-qt/: CMakeLists.txt  Dockerfile  Makefile  QWEN.md  README.md  build.sh  main.cpp
downstream/lc-qt/src/: main.cpp
downstream/lc-qt/src/windows/: classification_stats.cpp  classification_stats.h  customize_labels.cpp  customize_labels.h
include/: .clang-format  fast_convert.h  fast_convert.hh  fdist.h  fftw3.h  json.h  rhsort_key.h  rhsort_unsigned.h  sds.h  simd.h  simd_trig.hpp
include/klib/: ketopt.h  kopen.h  kstring.h  kthread.h  kvec.h
include/mufft/internal/: fftc.h
include/qfits/: qfits.h
include/sort/: bsort_key10.h  bsort_key8.h  quicksort.h
src/: hwloc_topo.h  ihsnpeaks  main.c  makefile  metadata.h  params.h  photview  pool.h  process.h  process_muFFT.h  profile.h  readout.h  smoother.h
src/debug/: makefile  photview  spec_viewer.py
src/nufft/: nufft1.c  nufft1.h  scaling.c  scaling_generic.h
src/utils/: .clang-format  aov.h  common.h  compat.h  convolution.h  convolution.hpp  process.h  readout.h  simd.h  smoother.h  spectrum.h  strings.h  trig.h
